# course

./: .gitignore  CMakeLists.txt
BaseCode/: CMakeLists.txt
BaseCode/include/: DenseMatrix.h
Connection/: CMakeLists.txt
Connection/include/: DenseMatrix.h  Viewer.h
Elasticity/: CMakeLists.txt
Elasticity/include/: Viewer.h
Fairing/: CMakeLists.txt
Fairing/include/: SparseMatrix.h
Flatten/: CMakeLists.txt
Flatten/include/: Viewer.h
Geodesics/: CMakeLists.txt
Hot2/: CMakeLists.txt
